Colaboratory を使用して作成しました

--- a/eustoma_harvest_date_prediction_1.0.0.ipynb
+++ b/eustoma_harvest_date_prediction_1.0.0.ipynb
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {
         "id": "bLXJcZUyZqTJ",
         "cellView": "form"
@@ -84,8 +84,10 @@
         "\n",
         "#@markdown ※日平均気温は最低11.8℃以上であること\n",
         "\n",
-        "\n",
-        "\n"
+        "#セル起動チェック\n",
+        "import os\n",
+        "if not os.path.exists('/content/pass_exist.txt'):\n",
+        "  os.makedirs('/content/pass_exist.txt', exist_ok=True)"
       ]
     },
     {
@@ -93,40 +95,50 @@
       "source": [
         "#@title 生育予測\n",
         "\n",
-        "#ライブラリをインポート\n",
-        "from datetime import datetime, date\n",
-        "from datetime import timedelta, date\n",
-        "from datetime import datetime\n",
-        "\n",
-        "#入力部分\n",
-        "品種を選択 = '\\u30EC\\u30A4\\u30CA\\uFF12\\u578B\\u30DB\\u30EF\\u30A4\\u30C8' #@param [\"セレブリッチホワイト\", \"レイナ２型ホワイト\"]\n",
-        "発蕾日を入力 = '2023-01-01' #@param {type:\"date\"}\n",
-        "期間平均気温を入力=25 #@param {type:\"integer\"}\n",
-        "#@markdown ※期間平均気温は日平均気温の平均\n",
-        "\n",
-        "\n",
-        "d1 = datetime.strptime(発蕾日を入力, '%Y-%m-%d')\n",
-        "\n",
-        "if 品種を選択 == 'セレブリッチホワイト':\n",
-        "  d2=d1 +timedelta(days=int(414.5/(期間平均気温を入力-11.8)))\n",
-        "if 品種を選択 == 'レイナ２型ホワイト':\n",
-        "  d2=d1 +timedelta(days=int(436/(期間平均気温を入力-11.8)))\n",
-        "\n",
-        "judge = (発蕾日がわかる,芽整理は１枝１花１蕾である,一次から二次または二次から三次分枝の頂花蕾を残してそれ以外の花蕾を摘除した,白熱灯を用いた長日処理を開花期まで行う,圃場内の日平均気温が計算できる)\n",
-        "if all(judge)==True:\n",
-        "  print(\"出荷予測日は\",d2.year,\"年\",d2.month,\"月\",d2.day,\"日です\")\n",
+        "import os\n",
+        "if not os.path.exists('/content/pass_exist.txt'):\n",
+        "    print(\"上の”以下の条件がすべて満たされる場合生育予測を行うことができる”を実行してください\")\n",
         "else:\n",
-        "  print(\"予測を行う条件が満たされていないため予測できません\")"
+        "\n",
+        "  #ライブラリをインポート\n",
+        "  from datetime import datetime, date\n",
+        "  from datetime import timedelta, date\n",
+        "  from datetime import datetime\n",
+        "  import shutil\n",
+        "\n",
+        "  #入力部分\n",
+        "  品種を選択 = '\\u30EC\\u30A4\\u30CA\\uFF12\\u578B\\u30DB\\u30EF\\u30A4\\u30C8' #@param [\"セレブリッチホワイト\", \"レイナ２型ホワイト\"]\n",
+        "  発蕾日を入力 = '2023-01-01' #@param {type:\"date\"}\n",
+        "  期間平均気温を入力=25 #@param {type:\"integer\"}\n",
+        "  #@markdown ※期間平均気温は日平均気温の平均\n",
+        "\n",
+        "\n",
+        "  d1 = datetime.strptime(発蕾日を入力, '%Y-%m-%d')\n",
+        "\n",
+        "  if 品種を選択 == 'セレブリッチホワイト':\n",
+        "    d2=d1 +timedelta(days=int(414.5/(期間平均気温を入力-11.8)))\n",
+        "  if 品種を選択 == 'レイナ２型ホワイト':\n",
+        "    d2=d1 +timedelta(days=int(436/(期間平均気温を入力-11.8)))\n",
+        "\n",
+        "  judge = (発蕾日がわかる,芽整理は１枝１花１蕾である,一次から二次または二次から三次分枝の頂花蕾を残してそれ以外の花蕾を摘除した,白熱灯を用いた長日処理を開花期まで行う,圃場内の日平均気温が計算できる)\n",
+        "  if all(judge)==True:\n",
+        "    print(\"出荷予測日は\",d2.year,\"年\",d2.month,\"月\",d2.day,\"日です\")\n",
+        "  else:\n",
+        "    #セル起動チェック\n",
+        "    if os.path.exists('/content/pass_exist.txt'):\n",
+        "      shutil.rmtree('/content/pass_exist.txt')\n",
+        "\n",
+        "    print(\"予測を行う条件が満たされていないため予測できません\")"
       ],
       "metadata": {
         "cellView": "form",
         "id": "08YJCrynfX1B",
-        "outputId": "7ea04ccb-d4ab-4b55-c7eb-9f4b31d1d403",
+        "outputId": "4e05392b-7b8b-426d-f9da-340c8b09520e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
