Colaboratory を使用して作成しました

--- a/eye_camera.ipynb
+++ b/eye_camera.ipynb
@@ -121,8 +121,8 @@
         "        # 縦横半分にリサイズ\n",
         "        #resize = cv2.resize(frame, size)\n",
         "\n",
-        "        # タイムコードを動画に追加\n",
-        "        cv2.drawMarker(frame, (int(df6.loc[int(frame_n)][1]*width),int(df6.loc[int(frame_n)][2]*height)), (0, 0, 255))\n",
+        "        # 視点を動画に追加\n",
+        "        cv2.drawMarker(frame, (int(df6.loc[int(frame_n)][1]*width),int(df6.loc[int(frame_n)][2]*height)), (0, 0, 255),cv2.MARKER_CROS,20)\n",
         "\n",
         "        # mp4動画を保存\n",
         "        out.write(frame)\n",
@@ -138,6 +138,7 @@
       ],
       "metadata": {
         "id": "SqsU8voNWSM7",
+        "cellView": "code",
         "outputId": "b212b6df-ee22-495a-fde5-964e8c53612c",
         "colab": {
           "base_uri": "https://localhost:8080/",
