Colaboratory を使用して作成しました

--- a/eustoma_harvest_date_prediction_1.0.0.ipynb
+++ b/eustoma_harvest_date_prediction_1.0.0.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/1900690/eustoma_harvest_date_prediction/blob/main/eustoma_harvest_date_prediction_1.0.0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/1900690/eustoma-harvest-date-prediction/blob/main/eustoma_harvest_date_prediction_1.0.0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -55,7 +55,7 @@
       "source": [
         "#トルコギキョウ切り花の出荷予測\n",
         "\n",
-        "参考：[発蕾日を起点としたトルコギキョウ切り花の収穫日予測と計画生産技術](https://)"
+        "参考：[発蕾日を起点としたトルコギキョウ切り花の収穫日予測と計画生産技術](https://www.jstage.jst.go.jp/article/hrj/22/2/22_173/_article/-char/ja/)"
       ],
       "metadata": {
         "id": "-gGlXLjfZzP1"
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "bLXJcZUyZqTJ",
         "cellView": "form",
